--- a/petcare/index.html
+++ b/petcare/index.html
@@ -22,7 +22,11 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1>Caring for Your Pets Like Family</h1>
-        <a href="#" class="btn">Book Now</a>
+        <p class="hero-subtext">Professional, Compassionate Care for Your Furry Friends</p>
+        <div class="cta-buttons">
+            <a href="#" class="btn primary-btn">Book Appointment</a>
+            <a href="#" class="btn secondary-btn">Emergency Care</a>
+        </div>
     </section>
 
     <!-- Services Section -->
@@ -33,20 +37,40 @@
                 <div class="service-icon"></div>
                 <h3>Vet Care</h3>
                 <p>Comprehensive veterinary services for your pet's health and wellbeing.</p>
+                <a href="services.html" class="service-link">Learn More</a>
             </div>
             <div class="service-card">
                 <div class="service-icon"></div>
                 <h3>Grooming</h3>
                 <p>Professional grooming services to keep your pet looking and feeling their best.</p>
+                <a href="services.html" class="service-link">Learn More</a>
             </div>
             <div class="service-card">
                 <div class="service-icon"></div>
                 <h3>Boarding</h3>
                 <p>Safe and comfortable boarding facilities for when you're away.</p>
+                <a href="services.html" class="service-link">Learn More</a>
             </div>
         </div>
         <div class="text-center">
             <a href="services.html" class="btn">View All Services</a>
+        </div>
+    </div>
+    
+    <!-- Testimonials Section -->
+    <div class="container gray-bg">
+        <h2 class="section-title">What Pet Parents Say</h2>
+        <div class="testimonials-container">
+            <div class="testimonial">
+                <div class="quote-mark">"</div>
+                <p>The staff treated my dog with such care and attention. I wouldn't trust anyone else with my furry family member!</p>
+                <p class="testimonial-author">- Sarah M.</p>
+            </div>
+            <div class="testimonial">
+                <div class="quote-mark">"</div>
+                <p>Excellent care from knowledgeable professionals. My cat's health improved dramatically after just one visit.</p>
+                <p class="testimonial-author">- James K.</p>
+            </div>
         </div>
     </div>
 
@@ -54,24 +78,56 @@
     <div class="container">
         <div class="about">
             <h2>Trusted Pet Care Since 2010</h2>
-            <div class="about-image">[Optimized Image]</div>
-            <a href="#" class="btn">Meet Our Team</a>
+            <div class="about-content">
+                <div class="about-image">[Optimized Image]</div>
+                <div class="about-text">
+                    <p>Our team of experienced veterinarians and staff are dedicated to providing the highest quality care for your pets. We understand that your pets are family, and we treat them with the same love and respect.</p>
+                    <p>With state-of-the-art facilities and a compassionate approach, we're here to support your pet's health through every stage of life.</p>
+                    <a href="#" class="btn">Meet Our Team</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Call to Action -->
+    <div class="cta-section">
+        <h2>Ready to Schedule a Visit?</h2>
+        <p>Book an appointment online or call us today.</p>
+        <div class="cta-buttons">
+            <a href="#" class="btn primary-btn">Book Online</a>
+            <a href="tel:1234567890" class="btn secondary-btn">Call Now</a>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <div class="contact-info">
-            <p>123 Pet Care Street, City, State ZIP</p>
-            <p>Phone: (123) 456-7890</p>
-            <p>Email: info@petcare.com</p>
+        <div class="footer-sections">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>123 Pet Care Street, City, State ZIP</p>
+                <p>Phone: (123) 456-7890</p>
+                <p>Email: info@petcare.com</p>
+            </div>
+            <div class="footer-section">
+                <h3>Hours</h3>
+                <p>Monday - Friday: 8am - 6pm</p>
+                <p>Saturday: 9am - 4pm</p>
+                <p>Sunday: Closed</p>
+            </div>
+            <div class="footer-section">
+                <h3>Connect</h3>
+                <div class="social-icons">
+                    <div class="social-icon">FB</div>
+                    <div class="social-icon">IG</div>
+                    <div class="social-icon">YT</div>
+                </div>
+                <div class="whatsapp-button">[WhatsApp]</div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Pet Care Services. All rights reserved.</p>
             <p class="admin-login">[Admin Login]</p>
             <p>[Blog Link]</p>
-        </div>
-        <div class="whatsapp-button">[WhatsApp]</div>
-        <div class="social-icons">
-            <div class="social-icon">FB</div>
-            <div class="social-icon">IG</div>
             <p>[SSL Lock]</p>
         </div>
     </footer>
