--- a/petcare/index.html
+++ b/petcare/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Meta Title] Pet Care Services - Home</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <div class="logo">LOGO</div>
+        <div class="logo"><i class="fas fa-paw"></i> PETCARE</div>
         <nav>
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
@@ -24,8 +26,8 @@
         <h1>Caring for Your Pets Like Family</h1>
         <p class="hero-subtext">Professional, Compassionate Care for Your Furry Friends</p>
         <div class="cta-buttons">
-            <a href="#" class="btn primary-btn">Book Appointment</a>
-            <a href="#" class="btn secondary-btn">Emergency Care</a>
+            <a href="#" class="btn primary-btn"><i class="far fa-calendar-alt"></i> Book Appointment</a>
+            <a href="#" class="btn secondary-btn"><i class="fas fa-first-aid"></i> Emergency Care</a>
         </div>
     </section>
 
@@ -34,22 +36,22 @@
         <h2 class="section-title">Our Services</h2>
         <div class="services-container">
             <div class="service-card">
-                <div class="service-icon"></div>
+                <div class="service-icon"><i class="fas fa-stethoscope"></i></div>
                 <h3>Vet Care</h3>
                 <p>Comprehensive veterinary services for your pet's health and wellbeing.</p>
-                <a href="services.html" class="service-link">Learn More</a>
+                <a href="services.html" class="service-link">Learn More <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="service-card">
-                <div class="service-icon"></div>
+                <div class="service-icon"><i class="fas fa-cut"></i></div>
                 <h3>Grooming</h3>
                 <p>Professional grooming services to keep your pet looking and feeling their best.</p>
-                <a href="services.html" class="service-link">Learn More</a>
+                <a href="services.html" class="service-link">Learn More <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="service-card">
-                <div class="service-icon"></div>
+                <div class="service-icon"><i class="fas fa-home"></i></div>
                 <h3>Boarding</h3>
                 <p>Safe and comfortable boarding facilities for when you're away.</p>
-                <a href="services.html" class="service-link">Learn More</a>
+                <a href="services.html" class="service-link">Learn More <i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
         <div class="text-center">
@@ -64,12 +66,12 @@
             <div class="testimonial">
                 <div class="quote-mark">"</div>
                 <p>The staff treated my dog with such care and attention. I wouldn't trust anyone else with my furry family member!</p>
-                <p class="testimonial-author">- Sarah M.</p>
+                <p class="testimonial-author">- Sarah M. <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
             </div>
             <div class="testimonial">
                 <div class="quote-mark">"</div>
                 <p>Excellent care from knowledgeable professionals. My cat's health improved dramatically after just one visit.</p>
-                <p class="testimonial-author">- James K.</p>
+                <p class="testimonial-author">- James K. <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
             </div>
         </div>
     </div>
@@ -83,7 +85,7 @@
                 <div class="about-text">
                     <p>Our team of experienced veterinarians and staff are dedicated to providing the highest quality care for your pets. We understand that your pets are family, and we treat them with the same love and respect.</p>
                     <p>With state-of-the-art facilities and a compassionate approach, we're here to support your pet's health through every stage of life.</p>
-                    <a href="#" class="btn">Meet Our Team</a>
+                    <a href="#" class="btn"><i class="fas fa-users"></i> Meet Our Team</a>
                 </div>
             </div>
         </div>
@@ -94,8 +96,8 @@
         <h2>Ready to Schedule a Visit?</h2>
         <p>Book an appointment online or call us today.</p>
         <div class="cta-buttons">
-            <a href="#" class="btn primary-btn">Book Online</a>
-            <a href="tel:1234567890" class="btn secondary-btn">Call Now</a>
+            <a href="#" class="btn primary-btn"><i class="fas fa-calendar-check"></i> Book Online</a>
+            <a href="tel:1234567890" class="btn secondary-btn"><i class="fas fa-phone"></i> Call Now</a>
         </div>
     </div>
 
@@ -104,32 +106,34 @@
         <div class="footer-sections">
             <div class="footer-section">
                 <h3>Contact Us</h3>
-                <p>123 Pet Care Street, City, State ZIP</p>
-                <p>Phone: (123) 456-7890</p>
-                <p>Email: info@petcare.com</p>
+                <p><i class="fas fa-map-marker-alt"></i> 123 Pet Care Street, City, State ZIP</p>
+                <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                <p><i class="fas fa-envelope"></i> info@petcare.com</p>
             </div>
             <div class="footer-section">
                 <h3>Hours</h3>
-                <p>Monday - Friday: 8am - 6pm</p>
-                <p>Saturday: 9am - 4pm</p>
-                <p>Sunday: Closed</p>
+                <p><i class="far fa-clock"></i> Monday - Friday: 8am - 6pm</p>
+                <p><i class="far fa-clock"></i> Saturday: 9am - 4pm</p>
+                <p><i class="far fa-clock"></i> Sunday: Closed</p>
             </div>
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="social-icons">
-                    <div class="social-icon">FB</div>
-                    <div class="social-icon">IG</div>
-                    <div class="social-icon">YT</div>
+                    <div class="social-icon"><i class="fab fa-facebook-f"></i></div>
+                    <div class="social-icon"><i class="fab fa-instagram"></i></div>
+                    <div class="social-icon"><i class="fab fa-youtube"></i></div>
                 </div>
-                <div class="whatsapp-button">[WhatsApp]</div>
+                <div class="whatsapp-button"><i class="fab fa-whatsapp"></i></div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2023 Pet Care Services. All rights reserved.</p>
-            <p class="admin-login">[Admin Login]</p>
-            <p>[Blog Link]</p>
-            <p>[SSL Lock]</p>
+            <p class="admin-login"><i class="fas fa-lock"></i> [Admin Login]</p>
+            <p><i class="fas fa-blog"></i> [Blog Link]</p>
+            <p><i class="fas fa-shield-alt"></i> [SSL Lock]</p>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
