add: booking form

--- a/petcare/hospital.html
+++ b/petcare/hospital.html
@@ -41,7 +41,7 @@
                 <p>
                     Our state-of-the-art hospital facility is equipped with the latest technology to provide the best care for your pets. We offer a full range of services including surgery, emergency care, diagnostics, and more. Our experienced veterinarians and staff are dedicated to keeping your pets healthy and happy.
                 </p>
-                <a href="contact.html" class="btn primary-btn"><i class="far fa-calendar-alt"></i> Schedule a Visit</a>
+                <a href="booking.html" class="btn primary-btn"><i class="far fa-calendar-alt"></i> Schedule a Visit</a>
             </div>
         </div>
         
@@ -160,7 +160,7 @@
             <h2>Ready to Schedule a Visit?</h2>
             <p>Experience our exceptional care for yourself.</p>
             <div class="cta-buttons">
-                <a href="#" class="btn primary-btn"><i class="fas fa-calendar-check"></i> Book Appointment</a>
+                <a href="booking.html" class="btn primary-btn"><i class="fas fa-calendar-check"></i> Book Appointment</a>
                 <a href="contact.html" class="btn secondary-btn"><i class="fas fa-envelope"></i> Contact Us</a>
             </div>
         </div>
