--- a/petcare/services.html
+++ b/petcare/services.html
@@ -36,7 +36,7 @@
             <div class="service-description">
                 <h2>Veterinary Care</h2>
                 <p>Our skilled veterinarians provide comprehensive care for your pets, including wellness exams, vaccinations, surgery, and emergency services. We use advanced technology to ensure the best possible treatment.</p>
-                <a href="#" class="btn">Book Now</a>
+                <a href="booking.html" class="btn">Book Now</a>
             </div>
         </div>
         
@@ -46,7 +46,7 @@
             <div class="service-description">
                 <h2>Pet Grooming</h2>
                 <p>Keep your pets looking and feeling their best with our professional grooming services. We offer baths, haircuts, nail trimming, ear cleaning, and special treatments for all breeds and sizes.</p>
-                <a href="#" class="btn">Book Now</a>
+                <a href="booking.html" class="btn">Book Now</a>
             </div>
         </div>
         
@@ -56,7 +56,7 @@
             <div class="service-description">
                 <h2>Pet Boarding</h2>
                 <p>When you're away, trust us to care for your pets in our comfortable, clean, and safe boarding facilities. We provide daily care, feeding, exercise, and plenty of love and attention.</p>
-                <a href="#" class="btn">Book Now</a>
+                <a href="booking.html" class="btn">Book Now</a>
             </div>
         </div>
     </div>
