--- a/petcare/index.html
+++ b/petcare/index.html
@@ -31,8 +31,8 @@
         <h1>Caring for Your Pets Like Family</h1>
         <p class="hero-subtext">Professional, Compassionate Care for Your Furry Friends</p>
         <div class="cta-buttons">
-            <a href="#" class="btn primary-btn"><i class="far fa-calendar-alt"></i> Book Appointment</a>
-            <a href="#" class="btn secondary-btn"><i class="fas fa-first-aid"></i> Emergency Care</a>
+            <a href="booking.html" class="btn primary-btn"><i class="far fa-calendar-alt"></i> Book Appointment</a>
+            <a href="contact.html" class="btn secondary-btn"><i class="fas fa-first-aid"></i> Emergency Care</a>
         </div>
     </section>
 
@@ -101,7 +101,7 @@
         <h2>Ready to Schedule a Visit?</h2>
         <p>Book an appointment online or call us today.</p>
         <div class="cta-buttons">
-            <a href="#" class="btn primary-btn"><i class="fas fa-calendar-check"></i> Book Online</a>
+            <a href="booking.html" class="btn primary-btn"><i class="fas fa-calendar-check"></i> Book Online</a>
             <a href="tel:1234567890" class="btn secondary-btn"><i class="fas fa-phone"></i> Call Now</a>
         </div>
     </div>
